Opened 16 years ago

Closed 15 years ago

Last modified 21 months ago

#4623 closed bug (fixed)

ACPI Errors when accessing Battery ACPI data

Reported by: thetick Owned by: tqh
Priority: normal Milestone: R1
Component: Drivers/ACPI Version: R1/alpha1
Keywords: Cc: bergep@…, fredrik.holmqvist@…
Blocked By: Blocking:
Platform: All

Description

When I launch PowerStatus nothing is installed in tracker after clicking the install button. I noticed the following in syslog. ACPI is enabled in the kernel settings all other parms are the defaults.

This is an IBM Thinkpad A22m with a fully functional ACPI working with Linux and Windows.

Sorry if I picked the wrong Component field for this issue but there was no ACPI or Power option under the System or Driver section.

I attached "grep -i acpi syslog" test file since cut and paste from the terminal does not seem to perserve returns with Bezilla and Trac.

Attachments (2)

Haiku_ACPI_Error.txt (3.3 KB ) - added by thetick 16 years ago.
"grep acpi syslog"
acpi_battery.txt (871 bytes ) - added by thetick 16 years ago.
/dev/power/acpi_battery

Download all attachments as: .zip

Change History (15)

by thetick, 16 years ago

Attachment: Haiku_ACPI_Error.txt added

"grep acpi syslog"

comment:1 by thetick, 16 years ago

Cc: bergep@… added

by thetick, 16 years ago

Attachment: acpi_battery.txt added

/dev/power/acpi_battery

comment:2 by michael.weirauch, 16 years ago

Does this look like a dup of #4152?

in reply to:  2 comment:3 by thetick, 16 years ago

Replying to michael.weirauch:

Does this look like a dup of #4152?

Looks very similar. I'll have to try the fix and reopen if not fixed. You may make this issue as a duplicate. Thanks!

comment:4 by tqh, 16 years ago

Looks like a dup. Btw please try hrev33236 or later.

comment:5 by tqh, 15 years ago

Cc: fredrik.holmqvist@… added

comment:6 by axeld, 15 years ago

Component: DriversDrivers/ACPI
Owner: changed from axeld to tqh

comment:7 by thetick, 15 years ago

Wow battery info works great with hrev34909! Thanks for the update. The powerstatus applet now works great on my Thinkpad. This issue can be closed.

comment:8 by tqh, 15 years ago

I want to keep it, since there are still minor fixes to do, when it doesn't manage to read data from EC controller. But it should at least work 'ok' as is.

comment:9 by thetick, 15 years ago

Hmm. I did notice that the powerstatus sometimes switches to grey and may have bogus status for awhile. I also noticed my extremely fast responding desktop become extremely sluggish. Just closing the power status brought back my fast desktop. Could this be case you mentioned above? By the way nothing was added to the syslog.

comment:10 by tqh, 15 years ago

Yes, at least the wrong values, but I think it can result in slowdowns as well.

(If anyone want to take a stab at it, as it is not on the top of my list atm, go ahead. It's the ACPI Embedded controller and maybe the driver for powerstatus that still needs work.)

comment:11 by tqh, 15 years ago

#5244 has a nice description of what happens when it bails out.

comment:12 by tqh, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev36511. Thanks for reporting.

comment:13 by thetick, 15 years ago

I've been runningr36511 for a few hours now and this fix looks good. My battery data appears to be stable and correct. Thanks.

Note: See TracTickets for help on using tickets.