The embedded controller handled timeouts wrong in several ways:  * It confused ms and usecs for ec_timeout  * It tried to handle waiting like on platforms that can't do better timing than ms. Haiku can do much better, which simplifies the code a lot.

This should fix #4623 and #5825. At least on my laptop BatteryStatus never shows weirdness or reports errors in syslog.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36511 a95241bf-73f2-0310-859d-f6bbb57e9c96